--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-FOOOOOOO in gh-pages
+<html>
+  <head>
+    <title>0x00019913 Index</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  </head>
 
-modified in copy
+  <body>
+    <script src="js/three.min.js"></script>
+    <script src="js/loaders/OBJLoader.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+</html>
+
