--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>0x00019913 Index</title>
+    <style>
+      body {
+      margin: 0px;
+      }
+    </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   </head>
