--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="js/three.min.js"></script>
     <script src="js/loaders/OBJLoader.js"></script>
     <script src="js/main.js"></script>
+
+    <div id="container"></div>
   </body>
 </html>
 
