added js models, js models render with normal maps

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <body>
     <div id="container"></div>
-    
+
     <script src="js/three.min.js"></script>
     <script src="js/loaders/OBJLoader.js"></script>
+    <script src="js/loaders/ColladaLoader.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
-
