--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div id="container"></div>
 
     <script src="js/three.min.js"></script>
+    <script src="config.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/loaders/OBJLoader.js"></script>
     <script src="js/loaders/ColladaLoader.js"></script>
     <script src="js/main.js"></script>
