implementing camera controls, added full 13 model, more customization for materials

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="container"></div>
 
     <script src="js/three.min.js"></script>
+    <script src="js/camcontrols.js"></script>
     <script src="config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/loaders/OBJLoader.js"></script>
