moved project 46, added menu

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
         <p>This is my attempt at <br />1. showing my models in 3D (as opposed to simply on renders) and <br />2. a robust method of building scenes from multiple separate models, primitives, and lights.</p>
 
-        <p>TODO: implement walking controls, implement a way of switching scenes (menu on the left), make camera work on mobile.</p>
+        <p>TODO: implement walking controls, implement a way of switching scenes (menu on the left), perhaps make camera work on mobile.</p>
 
         <p>This text is in Adobe Garamond Pro, courtesy of Adobe Typekit.</p>
 
         <div id="logo"></div>
       </div>
       <div id="menu">
-
+        <p>PROJECTS:</p>
       </div>
     </div>
 
