added 14, UI improvements, loops prettier

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <div id="container"></div>
     <div id="ui-overlay">
       <div id="overbar">
-        <div class="top-button" id="top-button-menu">
-          <p>Menu</p>
+        <div class="title-left">
+          <p>0x00019913</p>
         </div>
-        <div class="top-button">
-          <div id="button-logo"></div>
+        <div class="top-button" id="top-button-scenes">
+          <p>Scenes</p>
+        </div>
+        <div class="top-button" id="top-button-logo">
+          <div class="button-logo"></div>
         </div>
         <div class="top-button" id="top-button-info">
           <p>About</p>
@@ -35,8 +38,9 @@
         <p>TODO: implement walking controls, implement a way of switching scenes (with a menu), perhaps make camera work on mobile, make menus prettier.</p>
 
         <div id="logo"></div>
+
       </div>
-      <div id="menu" class="inactive">
+      <div id="scenes" class="inactive">
         <p>SCENES:</p>
       </div>
     </div>
