added project 28, added sky shader, reconsolidated code in utils.js

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
     <script src="js/three.min.js"></script>
     <script src="js/camcontrols.js"></script>
+    <script src="shaders/Shaders.js"></script>
     <script src="config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/loaders/OBJLoader.js"></script>
-    <script src="js/loaders/ColladaLoader.js"></script>
     <script src="js/main.js"></script>
     <script src="js/ui.js"></script>
   </body>
