made overbar button borders actually transparent, change about section

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <p>Possibly a mosquito?</p>
 
-        <p>This is my attempt at <br />1. showing my models in 3D (as opposed to simply on renders) and <br />2. a robust method of building scenes from multiple separate models, primitives, and lights.</p>
+        <p>This project is still very much a WIP. It's my attempt at <br />1. showing my models in 3D (as opposed to simply on renders) and <br />2. a robust method of building scenes from multiple separate models, primitives, and lights.</p>
 
-        <p>TODO: implement walking controls, implement a way of switching scenes (with a menu), perhaps make camera work on mobile, make menus prettier.</p>
+        <p>TODO: implement walking controls, perhaps make camera work on mobile, make menus prettier, make better shaders, refactor scene setup code into some sort of external format.</p>
 
         <div id="logo"></div>
 
