--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <p>This project is still very much a WIP. It's my attempt at <br />1. showing my models in 3D (as opposed to simply on renders) and <br />2. a robust method of building scenes from multiple separate models, primitives, and lights.</p>
 
-        <p>TODO: implement walking controls, perhaps make camera work on mobile, make menus prettier, make better shaders, refactor scene setup code into some sort of external format.</p>
+        <p>TODO: finish refactoring project config to load from individual JSON files, turn controls into a fully independent module like what Three.js has, make menus prettier, make better shaders, add more models, make a loading overlay.</p>
 
         <div id="logo"></div>
 
