--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <p>Possibly a mosquito?</p>
 
-        <p>This project is still very much a WIP. It's my attempt at <br />1. showing my models in 3D (as opposed to simply on renders) and <br />2. a robust method of building scenes from multiple separate models, primitives, and lights.</p>
+        <p>This project is still very much a WIP - not a portfolio, but rather an experiment. It's my attempt at <br />1. showing my models in 3D (as opposed to simply on renders) and <br />2. a robust method of building scenes from multiple separate models, primitives, and lights.</p>
 
         <p>TODO: finish refactoring project config to load from individual JSON files, turn controls into a fully independent module like what Three.js has, make menus prettier, make better shaders, add more models, make a loading overlay.</p>
 
